<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- Welcome Image -->
    <ImageView
        android:id="@+id/fotoSambutanAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/admin_kotak_sambutan" />

    <!-- Welcome Text -->

    <!-- Discover Text -->

    <TextView
        android:id="@+id/textSambutanAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fotoSambutanAdmin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="-113dp"
        android:layout_marginEnd="75dp"
        android:text="Selamat Datang Admin"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/textDiscoveryAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_above="@id/fotoSambutanAdmin"
        android:src="@drawable/admin_teks_discover" />

    <!-- Profile Picture -->
    <ImageButton
        android:id="@+id/fotoProfilAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/admin_foto_profil" />

    <!-- Buttons -->


    <ImageButton
        android:id="@+id/tombolCekLaporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/admin_tombol_cek_laporan" />

    <ImageButton
        android:id="@+id/tombolCekKritik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tombolCekLaporan"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/admin_tombol_cek_kritik" />

    <ImageButton
        android:id="@+id/tombolUserAccounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tombolCekKritik"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/admin_tombol_user_accounts" />

    <ImageButton
        android:id="@+id/tombolLogoutAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tombolUserAccounts"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/admin_tombol_logout" />

</RelativeLayout>
