<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#609966">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/cek1_kotak_background" />

    <!-- Kritik dan Saran Button -->

    <!-- Back Button -->

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/imageView"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="-129dp"
        android:background="@drawable/cek1_kotak_kritik_dan_saran" />

    <ImageButton
        android:id="@+id/kritikKembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/cek1_tombol_kembali"
        android:src="@drawable/cek1_tombol_kembali" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvKritik"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="180dp"/>
</RelativeLayout>
