...
        android:layout_marginStart="16dp"
        android:text="Tambahkan Komentar"
        android:textStyle="bold" />

    <!-- Comment Input -->
    <EditText
        android:id="@+id/inputTextKomentarLaporan"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_below="@id/textKomentarLaporan"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
...
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/fitur_laporan_tombol_lampirkan_file" />

    <ImageButton
        android:id="@+id/tombolKirimLaporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tombolKirimFileLaporan"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/fitur_kritik_tombol_kirim" />
...
