...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.417" />

    <ImageButton
        android:id="@+id/tombolLaporan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mainmenu_tombol_laporan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
...
